# mpm-play

./: .gitignore  README.org  api  pyproject.toml  setup.py
mpmplay/: __init__.py  cache.hy  cli.hy  hooks.hy  player.hy  scrobble.hy  server.hy
tests/: test_mpmplay.py
